--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.3.11",
-    "gh-pages": "^6.2.0"
+    "@types/react": "^18.3.11"
   }
 }
