--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecs-2024",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://rcm1-eclaimstatus.com",
+  "homepage": "https://Kaviysshanthi11.github.io/my-react-app",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -17,10 +17,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "gh-pages": "^6.2.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
@@ -47,7 +49,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -69,5 +73,6 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.11"
-  }
+  },
+   "proxy": "https://rcm1-eclaimstatus.com"
 }
